--- a/css/styles.css
+++ b/css/styles.css
@@ -28,29 +28,39 @@ body {
     max-width: 100%;
     grid-column: 1;
     border-radius: 50%;
-}
+}  
+
+  h1 {
+    grid-column: 2;
+    font-size: 1.5rem;
+    margin: 0.15rem;
+  }
+
+  h2 {
+    font-size: 1rem;
+  }
+
+  header img {
+    max-width: 200px;
+    grid-column: 1;
+    height: auto;
+  }
+
+  header, footer {
+    background-color: #96A13A;
+    padding: 2em;
+    margin: 0 auto;
+    border-radius: 1.6%;
+    align-items: center;
+  }
 
 header {
     display: grid;
     grid-template-columns: 200px 1fr;
     grid-template-rows: auto;
     grid-gap: 40px;
-    align-items: center;
-    background-color: #96A13A;
-    padding: 2em;
-    margin: 0 auto;
-    border-radius: 1.6%;
   }
-  
-  header img {
-    max-width: 200px;
-    grid-column: 1;
-  }
-  
-  header h1 {
-    grid-column: 2;
-  }
-  
+    
   main {
     padding: 0.5em 2em;
     margin: 0 auto;
@@ -62,11 +72,6 @@ header {
   }
   
   footer {
-    background-color: #96A13A;
-    padding: 2em;
-    margin: 0 auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    border-radius: 2%;
   }  
