--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -1,14 +1,11 @@
 
-h1, h2, h3 {
-font-family: 'Tapestry', cursive;
-}
-h3 {
-margin: 0;
-height: 50px;
+h1, h2, h3, h4 {
+    font-family: "Lato", sans-serif;
+    color: white;
 }
 p,li {
-font-family: 'Lato', sans-serif;
-color: white;
+    font-family: "Open Sans", sans-serif;
+    color: white;
 }
 a {
 color: rgb(214, 162, 7);
@@ -18,21 +15,6 @@ color: rgb(94, 94, 94);
 }
 body {
 background-color: rgb(61, 61, 61);
-max-width: 550px;
-margin: 0 auto;
-}
-header, footer {
-background-color: #96A13A;
-padding: 2em;
-margin: 0 auto;
-border-radius: 1.6%;
-align-items: center;
-}
-header {
-display: grid;
-grid-template-columns: 200px 1fr;
-grid-template-rows: auto;
-grid-gap: 40px;
 }
 img {
 width: 100%;
@@ -52,11 +34,14 @@ main {
 header {
   width: 100%;
   text-align: center;
+  margin-bottom: 1em;
+  background-color: #96A13A;
+  border-radius: 1.6%;
 }
 section {
-  background-color: #dfedf6;
-  border: 1px #afd2e9 solid;
-  border-radius: 3px;
+  background-color: #000000;
+  border: 1px #63705c solid;
+  border-radius: 2%;
   margin: 0.5em 0.5em 2em;
   max-width: 300px;
 }
@@ -64,12 +49,14 @@ h3 {
   margin: 0;
   height: 50px;
 }
-section p,
-.company {
+section p, .company {
   max-width: 250px;
   margin: 1em;
 }
 section .img {
   max-width: 250px;
   margin: 1em auto;
+}
+footer {
+padding: 2em;
 }
