--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -31,13 +31,6 @@ main {
   grid-template-rows: auto;
   justify-items: center;
 }
-header {
-  width: 100%;
-  text-align: center;
-  margin-bottom: 1em;
-  background-color: #96A13A;
-  border-radius: 1.6%;
-}
 section {
   background-color: #000000;
   border: 1px #63705c solid;
@@ -57,6 +50,17 @@ section .img {
   max-width: 250px;
   margin: 1em auto;
 }
+header, footer {
+  display: grid;
+  width: 100%;
+  text-align: center;
+  background-color: #96A13A;
+  border-radius: 1.6%;
+  margin: 0 auto;
+}
+header {
+  margin-bottom: 1em;
+}
 footer {
-padding: 2em;
+  padding: 1em;
 }
