--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -14,7 +14,6 @@ header, footer {
 }
 body {
     background-color: #5E5E5E;
-    max-width: 550px;
     margin: 0 auto;
 }
 a {
@@ -28,4 +27,45 @@ header {
 }
 footer {
     background-color: #F55D3E;
+}
+img {
+    width: 75px;
+}
+footer img {    
+    border-radius: 50%;
+}
+header h1 {    
+    font-size: 3em;
+}
+header h2 {    
+    font-size: 1em;
+    margin-top: -30px;
+}
+nav {
+	margin: 0 auto;
+	background-color: tomato;
+}
+.navigation {
+	list-style: none;
+	padding: 0;
+}
+.navigation li:first-child {
+	display: block;
+}
+.navigation li {
+	display: none;
+}
+.navigation a, .date {
+	display: block;
+	padding: 0.75rem;
+	text-align: left;
+	text-decoration: none;
+	color: black;
+	font-weight: 700;
+	transition: 0.5s;
+	font-size: clamp(1rem, 2vmin, 1.5rem);
+}
+.navigation a:hover {
+	color: white;
+	background-color: black;
 }
