--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -35,14 +35,22 @@ footer img {
     border-radius: 50%;
 }
 header h1 {    
-    font-size: 3em;
-}
-header h2 {    
     font-size: 1em;
-    margin-top: -30px;
-}.social-media img {
+}
+header .main-title {    
+    font-size: 2em;
+}
+.upper-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.social-media img {
     margin: 2px;
     width: 30px;
+}
+.currentDate {
+    text-align: center;
 }
 nav {
 	margin: 0 auto;
