--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -56,17 +56,17 @@ nav {
 	margin: 0 auto;
 	background-color: tomato;
 }
-.navigation {
+#navMenu {
 	list-style: none;
 	padding: 0;
 }
-.navigation li:first-child {
+#navMenu li:first-child {
 	display: block;
 }
-.navigation li {
+#navMenu li {
 	display: none;
 }
-.navigation a, .date {
+#navMenu a, .date {
 	display: block;
 	padding: 0.75rem;
 	text-align: left;
@@ -76,7 +76,7 @@ nav {
 	transition: 0.5s;
 	font-size: clamp(1rem, 2vmin, 1.5rem);
 }
-.navigation a:hover {
+#navMenu a:hover {
 	color: white;
 	background-color: black;
 }
