--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -38,7 +38,7 @@ header h1 {
     font-size: 1em;
 }
 header .main-title {    
-    font-size: 2em;
+    font-size: 1.5em;
 }
 .upper-header {
     display: flex;
@@ -106,4 +106,64 @@ header button {
 #menuButton.open #closeMenu {
     display: block;
     padding-left: 0.4em;
+}
+
+/* Main Styles */
+.hero, .event, .weather, .news-release,
+.join, .spotlights {
+  background-color: #8E8E8E;
+  border: 2px solid rgba(0, 0, 0, 0.8);
+  color: #fff;
+  max-width: 92vw;
+  height: 250px;
+  margin: 0.5em;
+  padding: 0.5em;
+}
+.join {
+  display: none;
+}
+.spotlights {
+  list-style-type: none;
+  height: auto;
+  margin-bottom: 2em;
+}
+.spotlights li {
+  max-width: 90vw;
+  height: 150px;
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  margin: 5px 0;
+  padding: 0.5em;
+}
+.spotlights li:nth-of-type(3) {
+  display: none;
+}
+footer {
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 100%;
+  align-items: center;
+  padding: 5vw 0;
+}
+footer img {
+  width: 100px;
+}
+.footer-commerce-info {
+  text-align: center;
+}
+.footer-commerce-info a {
+  color: #fff;
+}
+.footer-commerce-info a:hover {
+  color: rgba(254, 254, 254, 0.7);
+}
+.footer-commerce-info p {
+  padding-bottom: 15px;
+  border-bottom: 2px #ffd485 solid;
+}
+.footer-author-info {
+  text-align: center;
+}
+.footer-author-info p {
+  margin: 2px 0;
 }
