--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,34 +1,78 @@
 @media (min-width: 1300px) {
-    main {
-      grid-template-columns: 1fr 1fr 1fr;
-      max-width: 1000px;
-      margin: 0 auto;
-    }  
+    header, nav, header p {
+        max-width: 1050px;
+        width: 100%;
+    }
     header {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     } 
-    header h1 {
-        grid-column: 2, 3;
-        margin-top: -75px;
-        margin-bottom: 0;
-        width: 300px;
-        padding-left: 3rem;
-    }
-    header h2 {
-        grid-column: 2, 3;
-        margin-bottom: -30px;
-        margin-left: -300px;
-        padding-left: 5px;
-        width: 300px;
-    }
     .navigation {
         width: 700px;
     }
     header img {
-        width: 200px;
+        width: 60px;
+        padding: 1em;
     }
     footer img {
         width: 125px;
     }
+
+  /* Main Styles */
+  body main {
+    grid-template-columns: 25vw 50vw 25vw;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 5px;
+    align-content: flex-start;
+    justify-items: center;
   }
+  main .hero {
+    height: 550px;
+    grid-column: 2;
+    grid-row: 1 / span 3;
+  }
+
+  body main .event {
+    grid-column: 1;
+    grid-row: 1;
+    margin-bottom: 0.5em;
+  }
+
+  body main .weather {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  main .join {
+    grid-column: 1;
+    grid-row: 3;
+    width: 100%;
+  }
+
+  main .news-release {
+    grid-column: 2;
+    grid-row: 3;
+  }
+
+  main .spotlights {
+    grid-column: 3;
+    grid-row: 1 / span 4;
+    /* width: 70%; */
+  }
+
+  .spotlights li {
+    height: auto;
+  }
+
+  .spotlights li:nth-of-type(3) {
+    display: block;
+  }
+
+  body main .event,
+  body main .weather,
+  body main .join,
+  body main .spotlights {
+    width: 20vw;
+  }
+}
