--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -25,14 +25,8 @@ a:visited{
 header {
     background-color: black;
 }
-footer {
-    background-color: #F55D3E;
-}
 img {
     width: 75px;
-}
-footer img {    
-    border-radius: 50%;
 }
 header h1 {    
     font-size: 1em;
@@ -137,29 +131,26 @@ header button {
 .spotlights li:nth-of-type(3) {
   display: none;
 }
-footer {
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  flex: 1 1 100%;
-  align-items: center;
-  padding: 5vw 0;
+
+/* Footer Sytles*/
+footer {    
+    background-color: #F55D3E;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 100%;
+    align-items: center;
 }
 footer img {
-  width: 100px;
+  width: 60px;
+  border-radius: 50%;
 }
 .footer-commerce-info {
   text-align: center;
 }
-.footer-commerce-info a {
-  color: #fff;
-}
-.footer-commerce-info a:hover {
-  color: rgba(254, 254, 254, 0.7);
-}
 .footer-commerce-info p {
   padding-bottom: 15px;
-  border-bottom: 2px #ffd485 solid;
+  border-bottom: 2px solid black;
 }
 .footer-author-info {
   text-align: center;
