--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,6 +1,6 @@
 @media (min-width: 1300px) {
-    header, nav, header p {
-        max-width: 1050px;
+    header, footer, nav, header p {
+        max-width: 1600px;
         width: 100%;
     }
     header {
@@ -8,9 +8,6 @@
         flex-direction: column;
         align-items: center;
     } 
-    .navigation {
-        width: 700px;
-    }
     header img {
         width: 60px;
         padding: 1em;
@@ -32,43 +29,35 @@
     grid-column: 2;
     grid-row: 1 / span 3;
   }
-
   body main .event {
     grid-column: 1;
     grid-row: 1;
     margin-bottom: 0.5em;
   }
-
   body main .weather {
     grid-column: 1;
     grid-row: 2;
   }
-
   main .join {
     grid-column: 1;
     grid-row: 3;
     width: 100%;
   }
-
   main .news-release {
     grid-column: 2;
     grid-row: 3;
   }
-
   main .spotlights {
     grid-column: 3;
     grid-row: 1 / span 4;
     /* width: 70%; */
   }
-
   .spotlights li {
     height: auto;
   }
-
   .spotlights li:nth-of-type(3) {
     display: block;
   }
-
   body main .event,
   body main .weather,
   body main .join,
