--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -24,10 +24,12 @@ a:visited {
 
 /* Header Styles */
 header {
-  background-color: black;
+  background-color: #F55D3E;
 }
 img {
   width: 75px;
+  border-radius: 50%;
+  padding: 1em;
 }
 header h1 {    
   font-size: 1em;
@@ -49,7 +51,7 @@ header .main-title {
 }
 nav {
 	margin: 0 auto;
-	background-color: tomato;
+	background-color: #2E2E2E;
 }
 .navigation {
 	list-style: none;
