--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -26,7 +26,7 @@ a:visited {
 header {
   background-color: #F55D3E;
 }
-img {
+header img, footer img {
   width: 75px;
   border-radius: 50%;
   padding: 1em;
