--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -30,6 +30,9 @@
     grid-row: 1;
     width: 100%;
   }
+  .hero img {
+    height: 270px;
+  }
   .news-release {
     grid-column: 1 / 3;
     grid-row: 2;
