--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -29,6 +29,9 @@
     grid-column: 2;
     grid-row: 1 / span 3;
   }
+  .hero img {
+    height: 550px;
+  }
   body main .event {
     grid-column: 1;
     grid-row: 1;
@@ -53,7 +56,7 @@
     /* width: 70%; */
   }
   .spotlights li {
-    height: auto;
+    /* height: auto; */
   }
   .spotlights li:nth-of-type(3) {
     display: block;
