--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -103,8 +103,17 @@ nav {
 }
 .hero .pop-up {
   position: absolute;
-  text-align: center;
+  left: 0.2em;
   width: 100%;
+  font-size: 1.2em;
+  top: 370px;
+}
+.pop-up a{
+  background-color: #2E2E2E;
+  text-decoration: none;
+  border: 1px black solid;
+  padding: 0.5em;
+  border-radius: 5%;
 }
 .hero img {
   height: 250px;
@@ -131,7 +140,10 @@ nav {
   padding: 1em;
 }
 .spotlight-1 img {
-  width: 200px;
+  width: 380px;
+}
+.news-release p {
+  padding: 0em 1em 0em 1em;
 }
 
 /* Footer Sytles*/
