--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -32,6 +32,9 @@
   .hero img {
     height: 550px;
   }
+  .hero .pop-up {
+    font-size: 2em;
+  }
   body main .event {
     grid-column: 1;
     grid-row: 1;
@@ -57,6 +60,9 @@
   }
   .spotlights li:nth-of-type(3) {
     display: block;
+  }
+  .spotlight-3 img{
+    width: 200px;
   }
   body main .event,
   body main .weather,
