🌲 Changed the main color to Green

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
 }
 
   header, footer {
-    background-color: #3777FF;
+    background-color: #193d23;
     padding: 2em;
     margin: 0 auto;
     border-radius: 1.6%;
