📐 Added size to images in the discovery page

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -187,3 +187,8 @@ footer img {
 .footer-author-info p {
   margin: 2px 0;
 }
+
+/* Discovery page */
+.discovery-main img {
+  max-width: 600px;
+}
