--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -70,4 +70,12 @@
   body main .spotlights {
     width: 20vw;
   }
+  /* Discovery page */
+  .discovery-main img, .discovery-main p {
+    max-width: 600px;
+  }
+  .discovery-1, .discovery-2, .discovery-3,
+  .discovery-4,.discovery-5,.discovery-6 {
+    width: 650;
+  }
 }
