--- a/lesson8/css/small.css
+++ b/lesson8/css/small.css
@@ -1,17 +1,12 @@
 /* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
 html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
-
 /*----------- apply a natural box layout model to all elements --------------*/
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
-
-
 /*----------- BODY --------------*/
 body {
     font-size: 16px;
     font-family: Verdana, sans-serif;
 }
-
-
 /*----------- HEADER --------------*/
 header {
     padding: .5rem 2%;
@@ -19,7 +14,6 @@ header {
 }
 header h1 {margin: 0;}
 header h2 {margin: 0; font-weight: normal;}
-
 /*----------- NAVIGATION --------------*/
 nav {
     background-color: #666;
@@ -58,17 +52,63 @@ main {
     padding: 0 2%;
     min-height: 20rem;
 }
-
-
+/*----------- FORM --------------*/
+fieldset {
+    margin: 2rem 0;
+    border: 1px solid olivedrab;
+    border-radius: 10px;
+    padding: .5rem 2%;
+}
+legend {
+    color: olivedrab;
+    margin: 0 1rem;
+    padding: 0 .5rem;
+}
+.top, form div {
+    display: block;
+    padding: 1rem 0 0 0;
+    color: tomato;
+    font-size: .8rem;
+}
+.top input, .top select {
+    -webkit-appearance: none;
+    display: block;
+    font-size: 1rem;
+    border: solid 1px #999;
+    border-radius: 4px;
+    padding: .75rem;
+    color: #555;
+    width: 100%;
+    max-width: 20rem;
+    background-color: rgba(0,0,0,0.1);
+}
+.sbs {
+    display: block;
+    padding: .75rem;
+    color: #555;
+}
+.submitBtn {
+    border: none;
+    background-color: #9c2c13;
+    color: white;
+    border-radius: 1rem;
+    padding: .75rem 1.5rem;
+    margin: 0 0 2rem 2%;
+    width: 96%;
+    max-width: 20rem;
+}
+.top input:required {
+    border-left: red solid 6px;
+}
+.top input:required:valid {
+    border-left: green solid 6px;
+}
 /*----------- FOOTER --------------*/
 footer {
     background-color: #ddd;
     padding: .5rem 2%;
     text-align: center;
 }
-
-
-
 /*----- Clearfix: Force an Element not to collapse -----*/
 .clearfix:after {
   content: "";
