--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -229,3 +229,49 @@ footer img {
   padding: 0.5em;
   text-align: center;
 }
+/* Join Styles */
+.join-main h1 {
+  padding-left: 5%;
+}
+fieldset {
+  margin: 2rem 1rem 2rem 1rem;
+  border: 1px solid white;
+  border-radius: 2px;
+  padding: .5rem 2%;
+}
+legend {
+  color: white;
+  margin: 0 1rem;
+  padding: 0 .5rem;
+}
+.top, form div {
+  display: block;
+  padding: 1rem 0 0 0;
+  font-size: .8rem;
+}
+.top input, .top select {
+  -webkit-appearance: none;
+  display: block;
+  font-size: 1rem;
+  border: solid 1px #999;
+  border-radius: 2px;
+  padding: .75rem;
+  color: #555;
+  width: 100%;
+  max-width: 26rem;
+  background-color: rgba(0,0,0,0.1);
+}
+.sbs {
+  display: block;
+  padding: .75rem;
+}
+.submitBtn {
+  border: none;
+  background-color: #325895;
+  color: white;
+  border-radius: 4px;
+  padding: .75rem 1.5rem;
+  margin: 0 0 2rem 2%;
+  width: 96%;
+  max-width: 30rem;
+}
