🔧 Added 'px' to line 91 to fix error

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -88,7 +88,7 @@
   }
   .discovery-1, .discovery-2, .discovery-3,
   .discovery-4,.discovery-5,.discovery-6 {
-    width: 650;
+    width: 650px;
   }
   #brasão {
     padding: 3em;
