--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -268,6 +268,22 @@ legend {
   display: block;
   padding: .75rem;
 }
+.membership-info {
+  padding: 5% 5% 5% 5%;
+}
+.membership-info h3 {
+  font-size: 2rem;
+}.membership-info h4 {
+  font-size: 1.5rem;
+}
+.free-membership, .bronze-membership, 
+.silver-membership, .gold-membership {  
+  background-color: #333;
+  border-radius: 3px;
+  padding: 10px;
+  margin: 10px;
+  max-width: 425px;
+}
 .submitBtn {
   border: none;
   background-color: #325895;
