🦵🏽 Added max-width to body

--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,5 +1,5 @@
 @media (min-width: 1300px) {
-    header, footer, nav, header p {
+    header, body, footer, nav, header p {
         max-width: 1600px;
         width: 100%;
     }
