--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,7 +1,12 @@
 @media (min-width: 1300px) {
-    header, body, footer, nav, header p {
-        max-width: 1600px;
-        width: 100%;
+    header, body, .discovery-main, .join, .directory, footer, nav, header p {
+        max-width: 1400px;
+    }
+    .home-body {
+      max-width: none;
+    }
+    nav {
+      width: 100%;
     }
     header {
         display: flex;
@@ -56,7 +61,6 @@
   main .spotlights {
     grid-column: 3;
     grid-row: 1 / span 4;
-    /* width: 70%; */
   }
   .spotlights li:nth-of-type(3) {
     display: block;
